--- a/admin/style.css
+++ b/admin/style.css
@@ -154,3 +154,13 @@ form button{
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
+.detail{
+    padding: 1rem;
+    margin-top: 2rem;
+    background: rgba(128, 128, 128, 0.123);
+    border-radius: 1rem;
+}
+
+.detail p{
+    margin-top: .5rem;
+}
