--- a/shop.css
+++ b/shop.css
@@ -91,3 +91,25 @@
     width: 100%;
     height: unset;
 }
+
+.results{
+    width: 90%;
+    height: max-content;
+    background: rgba(255, 255, 255, 0.993);
+    position: absolute;
+    top: 6rem;
+    border-radius: .5rem;
+    box-shadow: 0px 20px 5px 1px rgba(128, 128, 128, 0.11);
+}
+
+.results span{
+    width: 100%;
+    padding: 1.3rem;
+    justify-content: space-between;
+    box-shadow:  0 0 5px 1px rgba(128, 128, 128, 0.062);
+}
+
+.results span h6{
+    font-size: 15px;
+    font-weight: 200;
+}
