--- a/css/signup.css
+++ b/css/signup.css
@@ -5,7 +5,7 @@
     align-items: flex-start;
  }
 .bg{
-    background: url(images/bg.avif), rgba(51, 48, 48, 0.137);
+    background: url(../images/bg.avif), rgba(51, 48, 48, 0.137);
     background-size: cover;
     background-position: center;
     background-blend-mode: overlay;
@@ -49,4 +49,13 @@
      background: #222;
      color: white;
      border: none;
+ }
+
+ .btn{
+    display: flex;
+    flex-direction: column;
+ }
+
+ .bth{
+    background: rgba(34, 34, 34, 0.382);
  }
