--- a/css/cart.css
+++ b/css/cart.css
@@ -138,8 +138,7 @@
 
 .update{
      
-    background: red;
-    position: absolute;
+     position: absolute;
     right: 10%;
     bottom: 5%;
     padding: .5rem;
@@ -158,6 +157,7 @@
         left: 0;
         top: 0;
         z-index: 6;
+        border-radius: 0;
      }
 
      .os{
@@ -170,7 +170,6 @@
      }
      .oy{
         width: 100vw;
-        border: 1px solid red;
         height: calc(70vh);
         margin-top: 25vh !important;
         margin-left: -5%;
@@ -183,6 +182,7 @@
 
      .os button{
         margin-top: .5rem;
+        border: none;
      }
 
      .cartitem{
