--- a/css/checkout.css
+++ b/css/checkout.css
@@ -90,3 +90,29 @@ button{
     font-weight: 300;
 
  }
+
+ @media (max-width: 750px){
+    .container{
+        grid-template-columns: 1fr;
+        overflow-y: auto;
+    }
+    .info{
+        margin-top: 20%;
+     }
+
+    .cont{
+         position: relative;
+         margin-top: -15vh;
+         padding-top: 0 !important;
+  
+    }
+
+    .oy{
+        position: relative;
+         border-radius: ;
+        padding-top: 0 !important;
+
+    }
+
+  
+ }
